🩹 Atualiza link do curso de Clojure para a Udemy

--- a/_resources/clojure/index.html
+++ b/_resources/clojure/index.html
@@ -19,7 +19,9 @@
     </h2>
 
     <header>
-        Acesse meu primeiro curso <a href="https://segundatech.teachable.com">Clojure: Introdução à Programação
+        Acesse meu primeiro curso <a
+            href="https://www.udemy.com/course/clojure-introducao-a-programacao-funcional/">Clojure: Introdução à
+            Programação
             Funcional</a>.
     </header>
 
