✨ Última versão do Edudu web.

--- a/_resources/edudu/index.html
+++ b/_resources/edudu/index.html
@@ -33,11 +33,7 @@
 
   <title>edudu</title>
   <link rel="manifest" href="manifest.json">
-
-  <script>
-    // The value below is injected by flutter build, do not touch.
-    const serviceWorkerVersion = "1298989128";
-  </script>
+  
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer=""></script>
 
@@ -138,28 +134,7 @@
     <img class="center" aria-hidden="true" src="splash/img/light-1x.png" alt="">
   </picture>
 
-
-
-
-
-
-
-  <script>
-    window.addEventListener('load', function (ev) {
-      // Download main.dart.js
-      _flutter.loader.loadEntrypoint({
-        serviceWorker: {
-          serviceWorkerVersion: serviceWorkerVersion,
-        },
-        onEntrypointLoaded: function (engineInitializer) {
-          engineInitializer.initializeEngine().then(function (appRunner) {
-            appRunner.runApp();
-          });
-        }
-      });
-    });
-  </script>
-
+  <script src="flutter_bootstrap.js" async></script>
 
 </body>
 
